--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,12 @@ dependencies {
             "com.codeborne:selenide:7.7.3",
             "org.junit.jupiter:junit-jupiter:5.11.4",
             'com.github.javafaker:javafaker:1.0.2',
-            'org.slf4j:slf4j-simple:2.0.7'
+            'org.slf4j:slf4j-simple:2.0.7',
+            'commons-io:commons-io:2.15.0',
+            'com.codeborne:pdf-test:1.5.0',
+            'com.codeborne:xls-test:1.4.3',
+            'com.opencsv:opencsv:5.9',
+            'com.fasterxml.jackson.core:jackson-databind:2.15.0'
     )
 }
 
