--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,20 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.9.6'
+}
+
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.19.0")
+            }
+        }
+    }
 }
 
 repositories {
@@ -16,7 +31,9 @@ dependencies {
             'com.codeborne:pdf-test:1.5.0',
             'com.codeborne:xls-test:1.4.3',
             'com.opencsv:opencsv:5.9',
-            'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+            'com.fasterxml.jackson.core:jackson-databind:2.15.0',
+            'io.qameta.allure:allure-selenide:2.17.3',
+            'org.aspectj:aspectjweaver:1.9.23'
     )
 }
 
