--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
     mavenCentral()
 }
 
+def allureVersion = "2.21.0",
+    selenideVersion = "6.19.1"
+
 dependencies {
     testImplementation(
             "com.codeborne:selenide:7.7.3",
